--- a/Kenshi-DnD/Kenshi-DnD.csproj
+++ b/Kenshi-DnD/Kenshi-DnD.csproj
@@ -22,6 +22,7 @@
     <None Remove="Resources\cursors\Flint.webp.cur" />
     <None Remove="Resources\cursors\Tooth_Pick.webp.cur" />
     <None Remove="Resources\img\bonepeople.jpg" />
+    <None Remove="saves\saves.txt" />
   </ItemGroup>
 
   <ItemGroup>
@@ -46,6 +47,10 @@
     <Content Include="Resources\cursors\CursorLicenseInfo.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="saves\saves.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+	  
   </ItemGroup>
 
   <ItemGroup>
@@ -60,8 +65,6 @@
     </Reference>
   </ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="Resources\saves\" />
-  </ItemGroup>
+  
 
 </Project>
