Arreglo de xml, iniciar partidas con arma aleatoria, uso de cursor génerico en todos los usercontrol, uso de Exo 2 Light como fuente de texto, recibir cats por vencer enemigos,quitar referencia innecesaria a Monsters en adventure, uso de GenerateTextblock para mejorar visibilidad, comprobación de que las excepciones saltan en los momentos correctos

--- a/Kenshi-DnD/Kenshi-DnD.csproj
+++ b/Kenshi-DnD/Kenshi-DnD.csproj
@@ -22,6 +22,7 @@
     <None Remove="Resources\cursors\CursorLicenseInfo.txt" />
     <None Remove="Resources\cursors\Flint.webp.cur" />
     <None Remove="Resources\cursors\Tooth_Pick.webp.cur" />
+    <None Remove="Resources\fonts\Exo2-Light.otf" />
     <None Remove="Resources\img\bonepeople.jpg" />
     <None Remove="Resources\img\map.jpg" />
     <None Remove="Resources\xml\kenshidata.xml" />
@@ -66,6 +67,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Resources\fonts\Exo2-Light.otf">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Resources\img\bonepeople.jpg">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
